--- a/finals.css
+++ b/finals.css
@@ -134,15 +134,15 @@
     }
 
     .product.CREAM {
-      background-image: url('poster.PNG');
+      background-image: url('poster.png');
     }
 
     .product.BLACK{
-      background-image: url('poster.PNG');
+      background-image: url('poster.png');
     }
 
     .product.MATCHA {
-      background-image: url('poster.PNG');
+      background-image: url('poster.png');
     }
 
     #cart {
